@@ -2,73 +2,56 @@ package objectModels;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.json.JsonMapper;
+import com.google.gson.JsonObject;
 import io.qameta.allure.Step;
 import io.restassured.response.Response;
-import pojoClasses.CreateNoteRequestPojo;
-import pojoClasses.CreateNoteResponsePojo;
+import yehiaEngine.managers.JsonManager;
+
 import java.util.Arrays;
+import java.util.List;
 
 import static yehiaEngine.managers.ApisManager.MakeAuthRequest;
 import static yehiaEngine.managers.ApisManager.getResponseBody;
 import static yehiaEngine.managers.PropertiesManager.getPropertiesValue;
 import static yehiaEngine.utilities.RandomDataGenerator.*;
+import static yehiaEngine.managers.ApisManager.MethodType.*;
+import static yehiaEngine.managers.ApisManager.ContentType.*;
+import static yehiaEngine.managers.ApisManager.AuthType.*;
 
 public class CreateNoteRequestModel {
 
     //Variables
     String createNoteEndpoint = getPropertiesValue("baseUrlApi")+"notes/";
-    String responseBodyAsString;
+    JsonObject requestObject = new JsonObject();
     Response response;
-    JsonMapper mapper;
-
-    String token;
-
-    //Constructor to pass Auth Token from Login into CreateNote Model
-    public CreateNoteRequestModel(String token) {
-        this.token = token;
-    }
-
-    //ObjectsFromPojoClasses
-    CreateNoteRequestPojo requestObject;
-    CreateNoteResponsePojo responseObject;
 
     @Step("Prepare CreateNote Request Statically from Json File")
     //Method to get Request Body inputs from Json File Statically
-    public CreateNoteRequestModel prepareCreateNoteRequestFromJsonFile(String noteData) throws JsonProcessingException {
-        mapper = new JsonMapper();
-        requestObject = mapper.readValue(noteData, CreateNoteRequestPojo.class);
+    public CreateNoteRequestModel prepareCreateNoteRequestFromJsonFile(String noteData) {
+        requestObject = JsonManager.convertJsonStringToJsonObject(noteData);
         return this;
     }
 
     @Step("Prepare CreateNote Request Dynamically With Random Values")
     //Method to set Request Body inputs from TimeStamp Dynamically
     public CreateNoteRequestModel prepareCreateNoteRequestWithRandomValues(){
-        requestObject = CreateNoteRequestPojo.builder()
-                .title(generateUniqueName())
-                .description(generateDescription())
-                .category(generateItemFromList(Arrays.asList("Home","Work","Personal")))
-                .build();
+        requestObject.addProperty("title",generateUniqueName());
+        requestObject.addProperty("description",generateDescription());
+        requestObject.addProperty("category",generateItemFromList(List.of("Home","Work","Personal")));
         return this;
     }
 
     @Step("Send CreateNote Request")
     //Method to Execute CreateNode Request
-    public CreateNoteResponseModel sendCreateNoteRequest() throws JsonProcessingException {
+    public CreateNoteResponseModel sendCreateNoteRequest(String token) {
 
-        response =
-                MakeAuthRequest("Post", createNoteEndpoint,requestObject,
-                        "application/x-www-form-urlencoded","X-Auth-Token",
-                        null,null,token);
+        response = MakeAuthRequest(POST, createNoteEndpoint,requestObject,URLENCODED,XAuthToken,
+                        token,null,null);
 
-        responseBodyAsString = getResponseBody(response);
-        mapper = new JsonMapper();
-
-        responseObject = mapper.readValue(responseBodyAsString, CreateNoteResponsePojo.class);
-
-        return new CreateNoteResponseModel(requestObject,responseObject,token);
+        return new CreateNoteResponseModel(requestObject,response);
     }
 
-    //Facade Method
+/*    //Facade Method
     @Step("Create new Note")
     public UpdateNoteRequestModel createNewNote(String noteJsonObject,String title,
                                                 String description,String category,String noteStatus) throws JsonProcessingException {
@@ -96,5 +79,5 @@ public class CreateNoteRequestModel {
                 .sendGetNoteRequest()
                 .validateStatusFromResponse("200")
                 .getNoteId();
-    }
+    }*/
 }
